--- a/src/app/header/scoreboard/scoreboard.component.scss
+++ b/src/app/header/scoreboard/scoreboard.component.scss
@@ -28,17 +28,30 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
+    min-height: 105px;
 
     .score-label {
       color: $score-text;
-      font-size: 1.2rem;
+      font-size: 2rem;
       text-transform: uppercase;
       text-align: center;
+      @media (max-width: 460px) {
+        font-size: 1.5rem;
+      }
+      @media (max-width: 350px) {
+        font-size: 1rem;
+      }
     }
 
     .score {
-      font-size: 2.5rem;
+      font-size: 3rem;
       color: $header-outline;
+      @media (max-width: 460px) {
+        font-size: 2rem;
+      }
+      @media (max-width: 350px) {
+        font-size: 1.5rem;
+      }
     }
     &.opponent-score-container {
       .score-label {
@@ -51,6 +64,6 @@
   }
 
   @media (min-width: 1000px) {
-    width: 50%;
+    width: 70%;
   }
 }
